Fixed stretching of images in listing detail

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -136,7 +136,7 @@ a:hover {
   margin-bottom: 50px;
 }
 
-.carousel img {
+.carousel .photo {
   display: inline-block;
   vertical-align: top;
   white-space: normal;
@@ -144,6 +144,13 @@ a:hover {
   height: 400px;
   background-color: #c2cbd3;
   margin-right: 1px;
+}
+
+.carousel .photo img {
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    overflow: hidden;
 }
 
 .listing-detail {
